Bug fix CS - can handle now additional functions with higher arity